style tweaks; fixed bg image on iOS

--- a/assets/stylesheets/base/_defaults.scss
+++ b/assets/stylesheets/base/_defaults.scss
@@ -1,6 +1,7 @@
 // Basic Elements
 body {
   @include ie-width;
+  padding-bottom: 3em;
   font-family: $typeface-sans;
   text-shadow: 1px 1px 1px transparent;
 }
@@ -14,21 +15,21 @@ p, a, h1, h2, h3, h4, h5, label {
 }
 
 h1 {
+  margin: 0.5em auto;
   font-size: 2em;
-  text-transform: uppercase;
-  font-weight: 700;
-  letter-spacing: -0.03125em;
   line-height: 1em;
-  padding: 0.5em 0 ;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: -0.03125em;
 
 }
 
 h2 {
-  padding: 1em 0 0.5em 0;
+  margin: 1em auto 0.5em;
+  color: $light-grey;
   font-size: 1.5em;
   line-height: 1em;
   text-transform: uppercase;
-  color: $light-grey;
 }
 
 h3 {}
